--- a/CssCenterDialog/index.html
+++ b/CssCenterDialog/index.html
@@ -2,8 +2,15 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" href="site.css">
 </head>
 <body>
+	<div class="container">
+		<div class="cbody"> aaaa</div>
+	</div>
 
+	<div class="flctainer">
+		<div class="fbody">bbbb</div>
+	</div>
 </body>
 </html>
